--- a/V2/P01.lyx
+++ b/V2/P01.lyx
@@ -3,9 +3,17 @@
 \begin_document
 \begin_header
 \textclass article
+\begin_preamble
+\usepackage{indentfirst}
+\setmainfont[BoldFont=STSong,ItalicFont=STKaiti]{STSong}
+\setsansfont[BoldFont=STHeiti]{STHeiti}
+\setmonofont{STFangsong}
+\XeTeXlinebreaklocale "zh"
+\XeTeXlinebreakskip = 0pt plus 1pt
+\end_preamble
 \use_default_options true
 \maintain_unincluded_children false
-\language english
+\language chinese-simplified
 \language_package default
 \inputencoding auto
 \fontencoding global
@@ -13,20 +21,21 @@
 \font_sans default
 \font_typewriter default
 \font_default_family default
-\use_non_tex_fonts false
+\use_non_tex_fonts true
 \font_sc false
 \font_osf false
 \font_sf_scale 100
 \font_tt_scale 100
 
-\graphics default
+\graphics xetex
 \default_output_format default
 \output_sync 0
 \bibtex_command default
 \index_command default
 \paperfontsize default
+\spacing single
 \use_hyperref false
-\papersize default
+\papersize a4paper
 \use_geometry false
 \use_amsmath 1
 \use_esint 1
@@ -191,6 +200,13 @@ F[i,v]=\mathrm{max}\{F[i-1,v],F[i-1,v-C_{i}]+W_{i}\}
 \end_layout
 
 \begin_layout LyX-Code
+\begin_inset Formula $F[0,0..V]=0$
+\end_inset
+
+
+\end_layout
+
+\begin_layout LyX-Code
 for 
 \begin_inset Formula $i$
 \end_inset
@@ -201,18 +217,6 @@ for
 
  to 
 \begin_inset Formula $N$
-\end_inset
-
-
-\end_layout
-
-\begin_layout LyX-Code
-    
-\begin_inset Formula $F[i,0]$
-\end_inset
-
- = 
-\begin_inset Formula $0$
 \end_inset
 
 
@@ -343,6 +347,13 @@ for
 \end_layout
 
 \begin_layout LyX-Code
+\begin_inset Formula $F[0..V]=0$
+\end_inset
+
+
+\end_layout
+
+\begin_layout LyX-Code
 for 
 \begin_inset Formula $i$
 \end_inset
@@ -391,11 +402,7 @@ for
 \begin_inset Formula $F[v]=\mathrm{max}\{F[v],F[v-C_{i}]+W_{i}\}$
 \end_inset
 
-一句，恰就相当于我们的转移方程
-\begin_inset Formula $F[i,v]=\mathrm{max}\{F[i-1,v],F[i-1,v-C_{i}]+W_{i}\}$
-\end_inset
-
-，因为现在的
+一句，恰就对应于我们原来的转移方程，因为现在的
 \begin_inset Formula $F[v-C_{i}]$
 \end_inset
 
@@ -415,7 +422,242 @@ for
 \begin_inset Formula $F[i,v-C_{i}]$
 \end_inset
 
-推导得到，与本题意不符，但它却是另一个重要的背包问题——完全背包问题——最简捷的解决方案，故学习只用一维数组解01背包问题是十分必要的。
+推导得到，与本题意不符。
+\end_layout
+
+\begin_layout Standard
+事实上，使用一维数组解01背包的程序在后面会被多次用到，所以这里抽象出一个处理一件01背包中的物品过程，以后的代码中直接调用不加说明。
+\end_layout
+
+\begin_layout LyX-Code
+def 
+\begin_inset Formula $\mathsf{ZeroOnePack}$
+\end_inset
+
+(
+\begin_inset Formula $F,C,W$
+\end_inset
+
+)
+\end_layout
+
+\begin_layout LyX-Code
+    for 
+\begin_inset Formula $v$
+\end_inset
+
+ = 
+\begin_inset Formula $V$
+\end_inset
+
+ to 
+\begin_inset Formula $C$
+\end_inset
+
+
+\end_layout
+
+\begin_layout LyX-Code
+        
+\begin_inset Formula $F[v]$
+\end_inset
+
+ = 
+\begin_inset Formula $\mathrm{max}\{F[v],f[v-C]+W\}$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+有了这个过程以后，01背包问题的伪代码就可以这样写：
+\end_layout
+
+\begin_layout LyX-Code
+for i = 
+\begin_inset Formula $1$
+\end_inset
+
+ to 
+\begin_inset Formula $N$
+\end_inset
+
+
+\end_layout
+
+\begin_layout LyX-Code
+    
+\begin_inset Formula $\mathsf{ZeroOnePack}$
+\end_inset
+
+(
+\begin_inset Formula $F,C_{i},W_{i}$
+\end_inset
+
+)
+\end_layout
+
+\begin_layout Section
+初始化的细节问题
+\end_layout
+
+\begin_layout Standard
+我们看到的求最优解的背包问题题目中，事实上有两种不太相同的问法。有的题目要求“恰好装满背包”时的最优解，有的题目则并没有要求必须把背包装满。一种区别这两种问法的
+实现方法是在初始化的时候有所不同。
+\end_layout
+
+\begin_layout Standard
+如果是第一种问法，要求恰好装满背包，那么在初始化时除了
+\begin_inset Formula $F[0]$
+\end_inset
+
+为
+\begin_inset Formula $0$
+\end_inset
+
+，其它
+\begin_inset Formula $F[1..V]$
+\end_inset
+
+均设为
+\begin_inset Formula $-\infty$
+\end_inset
+
+，这样就可以保证最终得到的
+\begin_inset Formula $F[V]$
+\end_inset
+
+是一种恰好装满背包的最优解。
+\end_layout
+
+\begin_layout Standard
+如果并没有要求必须把背包装满，而是只希望价格尽量大，初始化时应该将
+\begin_inset Formula $F[0..V]$
+\end_inset
+
+全部设为
+\begin_inset Formula $0$
+\end_inset
+
+。
+\end_layout
+
+\begin_layout Standard
+这是为什么呢？可以这样理解：初始化的
+\begin_inset Formula $F$
+\end_inset
+
+数组事实上就是在没有任何物品可以放入背包时的合法状态。如果要求背包恰好装满，那么此时只有容量为
+\begin_inset Formula $0$
+\end_inset
+
+的背包可以在什么也不装且价值为
+\begin_inset Formula $0$
+\end_inset
+
+的情况下被“恰好装满”，其它容量的背包均没有合法的解，属于未定义的状态，应该被赋值为-∞了。如果背包并非必须被装满，那么任何容量的背包都有一个合法解“什么都不装
+”，这个解的价值为
+\begin_inset Formula $0$
+\end_inset
+
+，所以初始时状态的值也就全部为
+\begin_inset Formula $0$
+\end_inset
+
+了。
+\end_layout
+
+\begin_layout Standard
+这个小技巧完全可以推广到其它类型的背包问题，后面也就不再对进行状态转移之前的初始化进行讲解。
+\end_layout
+
+\begin_layout Section
+一个常数优化
+\end_layout
+
+\begin_layout Standard
+上面伪代码中的
+\end_layout
+
+\begin_layout LyX-Code
+for 
+\begin_inset Formula $i$
+\end_inset
+
+ = 
+\begin_inset Formula $1$
+\end_inset
+
+ to 
+\begin_inset Formula $N$
+\end_inset
+
+
+\end_layout
+
+\begin_layout LyX-Code
+    for 
+\begin_inset Formula $v$
+\end_inset
+
+ = 
+\begin_inset Formula $V$
+\end_inset
+
+ to 
+\begin_inset Formula $C_{i}$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+中第二重循环的下限可以改进。它可以被优化为
+\end_layout
+
+\begin_layout LyX-Code
+for 
+\begin_inset Formula $i$
+\end_inset
+
+ = 
+\begin_inset Formula $1$
+\end_inset
+
+ to 
+\begin_inset Formula $N$
+\end_inset
+
+
+\end_layout
+
+\begin_layout LyX-Code
+    for 
+\begin_inset Formula $v$
+\end_inset
+
+ = 
+\begin_inset Formula $V$
+\end_inset
+
+ to 
+\begin_inset Formula $\mathrm{max}\{V-\Sigma_{i}^{N}W_{i},C_{i}\}$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+这个优化之所以成立的原因请读者自己思考。（提示：使用二维的转移方程思考较易。）
+\end_layout
+
+\begin_layout Section
+小结
+\end_layout
+
+\begin_layout Standard
+01背包问题是最基本的背包问题，它包含了背包问题中设计状态、方程的最基本思想。另外，别的类型的背包问题往往也可以转换成01背包问题求解。故一定要仔细体会上面基本
+思路的得出方法，状态转移方程的意义，以及空间复杂度怎样被优化。
 \end_layout
 
 \end_body
