--- a/V2.lyx
+++ b/V2.lyx
@@ -80,7 +80,7 @@
 \begin_body
 
 \begin_layout Title
-背包问题九讲 v2.0
+背包问题九讲2.0
 \end_layout
 
 \begin_layout Author
@@ -97,11 +97,11 @@ LatexCommand tableofcontents
 
 \end_layout
 
-\begin_layout Part
+\begin_layout Section
 01背包问题
 \end_layout
 
-\begin_layout Section
+\begin_layout Subsection
 题目
 \end_layout
 
@@ -129,7 +129,7 @@ LatexCommand tableofcontents
 。求解将哪些物品装入背包可使价值总和最大。
 \end_layout
 
-\begin_layout Section
+\begin_layout Subsection
 基本思路
 \end_layout
 
@@ -279,7 +279,7 @@ for
 
 \end_layout
 
-\begin_layout Section
+\begin_layout Subsection
 优化空间复杂度 
 \end_layout
 
@@ -526,7 +526,7 @@ for i =
 )
 \end_layout
 
-\begin_layout Section
+\begin_layout Subsection
 初始化的细节问题
 \end_layout
 
@@ -600,7 +600,7 @@ for i =
 这个小技巧完全可以推广到其它类型的背包问题，后面也就不再对进行状态转移之前的初始化进行讲解。
 \end_layout
 
-\begin_layout Section
+\begin_layout Subsection
 一个常数优化
 \end_layout
 
@@ -680,13 +680,460 @@ for
 这个优化之所以成立的原因请读者自己思考。（提示：使用二维的转移方程思考较易。）
 \end_layout
 
-\begin_layout Section
+\begin_layout Subsection
 小结
 \end_layout
 
 \begin_layout Standard
 01背包问题是最基本的背包问题，它包含了背包问题中设计状态、方程的最基本思想。另外，别的类型的背包问题往往也可以转换成01背包问题求解。故一定要仔细体会上面基本
 思路的得出方法，状态转移方程的意义，以及空间复杂度怎样被优化。
+\end_layout
+
+\begin_layout Section
+完全背包问题
+\end_layout
+
+\begin_layout Subsection
+题目
+\end_layout
+
+\begin_layout Standard
+有
+\begin_inset Formula $N$
+\end_inset
+
+种物品和一个容量为
+\begin_inset Formula $V$
+\end_inset
+
+的背包，每种物品都有无限件可用。放入第
+\begin_inset Formula $i$
+\end_inset
+
+种物品的耗费的空间是
+\begin_inset Formula $C_{i}$
+\end_inset
+
+，得到的价值是
+\begin_inset Formula $W_{i}$
+\end_inset
+
+。求解：将哪些物品装入背包，可使这些物品的耗费的空间总和不超过背包容量，且价值总和最大。
+\end_layout
+
+\begin_layout Subsection
+基本思路 
+\end_layout
+
+\begin_layout Standard
+这个问题非常类似于01背包问题，所不同的是每种物品有无限件。也就是从每种物品的角度考虑，与它相关的策略已并非取或不取两种，而是有取
+\begin_inset Formula $0$
+\end_inset
+
+件、取
+\begin_inset Formula $1$
+\end_inset
+
+件、取
+\begin_inset Formula $2$
+\end_inset
+
+件……直至取
+\begin_inset Formula $\left\lfloor V/C_{i}\right\rfloor $
+\end_inset
+
+件等很多种。
+\end_layout
+
+\begin_layout Standard
+如果仍然按照解01背包时的思路，令
+\begin_inset Formula $F[i,v]$
+\end_inset
+
+表示前
+\begin_inset Formula $i$
+\end_inset
+
+种物品恰放入一个容量为
+\begin_inset Formula $v$
+\end_inset
+
+的背包的最大权值。仍然可以按照每种物品不同的策略写出状态转移方程，像这样：
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+F[i,v]=\mathrm{max}\{F[i-1,v-kC_{i}]+kW_{i}\:|\:0\leq kC_{i}\leq v\}
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+这跟01背包问题一样有
+\begin_inset Formula $O(VN)$
+\end_inset
+
+个状态需要求解，但求解每个状态的时间已经不是常数了，求解状态
+\begin_inset Formula $F[i,v]$
+\end_inset
+
+的时间是
+\begin_inset Formula $O(\frac{v}{C_{i}})$
+\end_inset
+
+，总的复杂度可以认为是
+\begin_inset Formula $O(NV\Sigma{\frac{{V}}{C_{i}}})$
+\end_inset
+
+，是比较大的。
+\end_layout
+
+\begin_layout Standard
+将01背包问题的基本思路加以改进，得到了这样一个清晰的方法。这说明01背包问题的方程的确是很重要，可以推及其它类型的背包问题。但我们还是要试图改进这个复杂度。
+\end_layout
+
+\begin_layout Subsection
+一个简单有效的优化 
+\end_layout
+
+\begin_layout Standard
+完全背包问题有一个很简单有效的优化，是这样的：若两件物品
+\begin_inset Formula $i$
+\end_inset
+
+、
+\begin_inset Formula $j$
+\end_inset
+
+满足
+\begin_inset Formula $C_{i}\leq C_{j}$
+\end_inset
+
+且
+\begin_inset Formula $W_{i}\geq W_{j}$
+\end_inset
+
+，则将可以将物品
+\begin_inset Formula $j$
+\end_inset
+
+直接去掉，不用考虑。
+\end_layout
+
+\begin_layout Standard
+这个优化的正确性是显然的：任何情况下都可将价值小耗费高的
+\begin_inset Formula $j$
+\end_inset
+
+换成物美价廉的
+\begin_inset Formula $i$
+\end_inset
+
+，得到的方案至少不会更差。对于随机生成的数据，这个方法往往会大大减少物品的件数，从而加快速度。然而这个并不能改善最坏情况的复杂度，因为有可能特别设计的数据可以一
+件物品也去不掉。
+\end_layout
+
+\begin_layout Standard
+这个优化可以简单的
+\begin_inset Formula $O(N^{2})$
+\end_inset
+
+地实现，一般都可以承受。另外，针对背包问题而言，比较不错的一种方法是：首先将费用大于
+\begin_inset Formula $V$
+\end_inset
+
+的物品去掉，然后使用类似计数排序的做法，计算出费用相同的物品中价值最高的是哪个，可以
+\begin_inset Formula $O(V+N)$
+\end_inset
+
+地完成这个优化。这个不太重要的过程就不给出伪代码了，希望你能独立思考写出伪代码或程序。
+\end_layout
+
+\begin_layout Subsection
+转化为01背包问题求解
+\end_layout
+
+\begin_layout Standard
+01背包问题是最基本的背包问题，我们可以考虑把完全背包问题转化为01背包问题来解。
+\end_layout
+
+\begin_layout Standard
+最简单的想法是，考虑到第
+\begin_inset Formula $i$
+\end_inset
+
+种物品最多选
+\begin_inset Formula $\left\lfloor \text{\frac{{V}}{C_{i}}}\right\rfloor $
+\end_inset
+
+件，于是可以把第i种物品转化为
+\begin_inset Formula $\left\lfloor \text{\frac{{V}}{C_{i}}}\right\rfloor $
+\end_inset
+
+件费用及价值均不变的物品，然后求解这个01背包问题。这样的做法完全没有改进时间复杂度，但这种方法也指明了将完全背包问题转化为01背包问题的思路：将一种物品拆成多
+件只能选
+\begin_inset Formula $0$
+\end_inset
+
+件或
+\begin_inset Formula $1$
+\end_inset
+
+件的01背包中的物品。
+\end_layout
+
+\begin_layout Standard
+更高效的转化方法是：把第
+\begin_inset Formula $i$
+\end_inset
+
+种物品拆成费用为
+\begin_inset Formula $C_{i}2^{k}$
+\end_inset
+
+、价值为
+\begin_inset Formula $W_{i}2^{k}$
+\end_inset
+
+的若干件物品，其中
+\begin_inset Formula $k$
+\end_inset
+
+取遍满足
+\begin_inset Formula $C_{i}2^{k}\leq V$
+\end_inset
+
+的非负整数。
+\end_layout
+
+\begin_layout Standard
+这是二进制的思想。因为，不管最优策略选几件第
+\begin_inset Formula $i$
+\end_inset
+
+种物品，其件数写成二进制后，总可以表示成若干个
+\begin_inset Formula $2^{k}$
+\end_inset
+
+件物品的和。这样一来就把每种物品拆成
+\begin_inset Formula $O(\mathrm{log}\text{\frac{{V}}{C_{i}}})$
+\end_inset
+
+件物品，是一个很大的改进。
+\end_layout
+
+\begin_layout Subsection
+\begin_inset Formula $O(VN)$
+\end_inset
+
+的算法
+\end_layout
+
+\begin_layout Standard
+这个算法使用一维数组，先看伪代码：
+\end_layout
+
+\begin_layout LyX-Code
+\begin_inset Formula $F[0..V]=0$
+\end_inset
+
+
+\end_layout
+
+\begin_layout LyX-Code
+for 
+\begin_inset Formula $i$
+\end_inset
+
+ = 
+\begin_inset Formula $1$
+\end_inset
+
+ to 
+\begin_inset Formula $N$
+\end_inset
+
+
+\end_layout
+
+\begin_layout LyX-Code
+    for 
+\begin_inset Formula $v$
+\end_inset
+
+ = 
+\begin_inset Formula $C_{i}$
+\end_inset
+
+ to 
+\begin_inset Formula $V$
+\end_inset
+
+
+\end_layout
+
+\begin_layout LyX-Code
+        
+\begin_inset Formula $F[v]$
+\end_inset
+
+ = 
+\begin_inset Formula $\mathrm{max}\{F[v],F[v-C_{i}]+W_{i}\}$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+你会发现，这个伪代码与01背包问题的伪代码只有
+\begin_inset Formula $v$
+\end_inset
+
+的循环次序不同而已。
+\end_layout
+
+\begin_layout Standard
+为什么这个算法就可行呢？首先想想为什么01背包中要按照
+\begin_inset Formula $v$
+\end_inset
+
+递减的次序来循环。让
+\begin_inset Formula $v$
+\end_inset
+
+递减是为了保证第
+\begin_inset Formula $i$
+\end_inset
+
+次循环中的状态
+\begin_inset Formula $F[i,v]$
+\end_inset
+
+是由状态
+\begin_inset Formula $F[i-1,v-C_{i}]$
+\end_inset
+
+递推而来。换句话说，这正是为了保证每件物品只选一次，保证在考虑“选入第
+\begin_inset Formula $i$
+\end_inset
+
+件物品”这件策略时，依据的是一个绝无已经选入第
+\begin_inset Formula $i$
+\end_inset
+
+件物品的子结果
+\begin_inset Formula $F[i-1,v-C_{i}]$
+\end_inset
+
+。而现在完全背包的特点恰是每种物品可选无限件，所以在考虑“加选一件第
+\begin_inset Formula $i$
+\end_inset
+
+种物品”这种策略时，却正需要一个可能已选入第
+\begin_inset Formula $i$
+\end_inset
+
+种物品的子结果
+\begin_inset Formula $F[i,v-C_{i}]$
+\end_inset
+
+，所以就可以并且必须采用
+\begin_inset Formula $v$
+\end_inset
+
+递增的顺序循环。这就是这个简单的程序为何成立的道理。
+\end_layout
+
+\begin_layout Standard
+值得一提的是，上面的伪代码中两层for循环的次序可以颠倒。这个结论有可能会带来算法时间常数上的优化。
+\end_layout
+
+\begin_layout Standard
+这个算法也可以由另外的思路得出。例如，将基本思路中求解
+\begin_inset Formula $F[i,v-C_{i}]$
+\end_inset
+
+的状态转移方程显式地写出来，代入原方程中，会发现该方程可以等价地变形成这种形式：
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+F[i,v]=\mathrm{max(}{F[i-1,v],F[i,v-C_{i}]+W_{i}})
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+将这个方程用一维数组实现，便得到了上面的伪代码。
+\end_layout
+
+\begin_layout Standard
+最后抽象出处理一件完全背包类物品的过程伪代码：
+\end_layout
+
+\begin_layout LyX-Code
+def 
+\begin_inset Formula $\mathsf{CompletePack}$
+\end_inset
+
+(
+\begin_inset Formula $F,C,W$
+\end_inset
+
+)
+\end_layout
+
+\begin_layout LyX-Code
+    for 
+\begin_inset Formula $v$
+\end_inset
+
+ = 
+\begin_inset Formula $C$
+\end_inset
+
+ to 
+\begin_inset Formula $V$
+\end_inset
+
+
+\end_layout
+
+\begin_layout LyX-Code
+        
+\begin_inset Formula $F[v]$
+\end_inset
+
+ = 
+\begin_inset Formula $\mathrm{max}\{F[v],f[v-C]+W\}$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+总结
+\end_layout
+
+\begin_layout Standard
+完全背包问题也是一个相当基础的背包问题，它有两个状态转移方程。希望你能够对这两个状态转移方程都仔细地体会，不仅记住，也要弄明白它们是怎么得出来的，最好能够自己想
+一种得到这些方程的方法。
+\end_layout
+
+\begin_layout Standard
+事实上，对每一道动态规划题目都思考其方程的意义以及如何得来，是加深对动态规划的理解、提高动态规划功力的好方法。
+\end_layout
+
+\begin_layout Standard
+
 \end_layout
 
 \end_body
